[package]
name = "fedimint-tonic-lnd"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
description = "An async library implementing LND RPC via tonic and prost. Forked from https://github.com/Kixunil/tonic_lnd"
homepage = "https://github.com/fedimint/tonic_lnd"
repository = "https://github.com/fedimint/tonic_lnd"
readme = "README.md"
keywords = ["LND", "rpc", "grpc", "tonic", "async"]
categories = [
  "api-bindings",
  "asynchronous",
  "cryptography::cryptocurrencies",
  "network-programming",
]
license = "MITNFA"

[features]
lightningrpc = []
signrpc = []
walletrpc = ["signrpc"]
peersrpc = []
versionrpc = []
routerrpc = ["lightningrpc"]
invoicesrpc = ["lightningrpc"]
staterpc = ["lightningrpc"]
all = [
  "lightningrpc",
  "walletrpc",
  "peersrpc",
  "versionrpc",
  "routerrpc",
  "invoicesrpc",
  "staterpc",
]
default = ["all"]
tracing = []

tls-ring = ["rustls/ring", "tonic/tls-ring", "hyper-rustls/ring"]
tls-aws-lc-rs = ["rustls/aws-lc-rs", "tonic/tls-aws-lc", "hyper-rustls/aws-lc-rs"]

[dependencies]
hex = "0.4.3"
rustls = { version = "0.23", default-features = false }
rustls-pemfile = "2"
hyper-rustls = { version = "0.27", features = ["http2", "tls12", "rustls-platform-verifier"], default-features = false }
tonic = { version = "0.14", features = ["channel", "codegen"], default-features = false }
prost = "0.14"
tonic-prost = "0.14"
tokio = { version = "1", features = ["fs"] }
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "get_info"
path = "examples/get_info.rs"
required-features = ["lightningrpc"]

[[example]]
name = "get_version"
path = "examples/get_version.rs"
required-features = ["versionrpc"]

[[example]]
name = "track_payment"
path = "examples/track_payment.rs"
required-features = ["routerrpc"]

[[example]]
name = "cancel_invoice"
path = "examples/cancel_invoice.rs"
required-features = ["invoicesrpc"]

[[example]]
name = "subscribe_invoices"
path = "examples/subscribe_invoices.rs"
required-features = ["invoicesrpc"]

[[example]]
name = "intercept_htlcs"
path = "examples/intercept_htlcs.rs"
required-features = ["routerrpc"]
